# automatic_deposit

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
app/: config.py  exception.py  main.py
app/database/: database.py
app/deposite/: deosite_models.py  deposite_hendlers.py  deposite_schema.py  deposite_service.py
app/repositories/: deposite_repository.py
tests/: deptest.py  fixture.py  test_deptest.py
