[tool.poetry]
name = "calculate-deposit"
version = "0.1.0"
description = ""
authors = ["Kvezac <Kvezak@gmail.com>"]
license = "MIT"
readme = "README.md"
package-mode = true

[tool.poetry.dependencies]
python = "^3.11.10"
fastapi = "^0.115.0"
sqlalchemy = "^2.0.35"
uvicorn = "^0.31.0"
psycopg2-binary = "^2.9.9"
pydantic-settings = "^2.5.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
